# mpdutils CMakeLists.txt
# Copyright (C) 2012 Alessandro Ghedini <al3xbio@gmail.com>
# This file is released under the 3 clause BSD license, see COPYING

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(mpdutils C)

SET(VERSION_MAJOR 0)
SET(VERSION_MINOR 1)

SET(INSTALL_PREFIX ${CMAKE_INSTALL_PREFIX})

INCLUDE(FindPkgConfig)
INCLUDE(CheckIncludeFiles)

PKG_CHECK_MODULES(X11 x11 REQUIRED)
PKG_CHECK_MODULES(MPC libmpdclient REQUIRED)
PKG_CHECK_MODULES(NOTIFY libnotify REQUIRED)

INCLUDE_DIRECTORIES(
	${X11_INCLUDE_DIRS}
	${MPC_INCLUDE_DIRS}
	${NOTIFY_INCLUDE_DIRS}
)

ADD_EXECUTABLE(mpdaddall "src/mpdaddall.c")
TARGET_LINK_LIBRARIES(mpdaddall ${MPC_LIBRARIES})
SET_TARGET_PROPERTIES(mpdaddall PROPERTIES COMPILE_FLAGS "-Wall -pedantic")

ADD_EXECUTABLE(mpdlen "src/mpdlen.c")
TARGET_LINK_LIBRARIES(mpdlen ${MPC_LIBRARIES})
SET_TARGET_PROPERTIES(mpdlen PROPERTIES COMPILE_FLAGS "-Wall -pedantic")

ADD_EXECUTABLE(mpdmmkeys "src/mpdmmkeys.c")
TARGET_LINK_LIBRARIES(mpdmmkeys ${MPC_LIBRARIES} ${X11_LIBRARIES})
SET_TARGET_PROPERTIES(mpdmmkeys PROPERTIES COMPILE_FLAGS "-Wall -pedantic")

ADD_EXECUTABLE(mpdnotify "src/mpdnotify.c")
TARGET_LINK_LIBRARIES(mpdnotify ${MPC_LIBRARIES} ${NOTIFY_LIBRARIES})
SET_TARGET_PROPERTIES(mpdnotify PROPERTIES COMPILE_FLAGS "-Wall -pedantic")

ADD_EXECUTABLE(mpdplayby "src/mpdplayby.c")
TARGET_LINK_LIBRARIES(mpdplayby ${MPC_LIBRARIES})
SET_TARGET_PROPERTIES(mpdplayby PROPERTIES COMPILE_FLAGS "-Wall -pedantic")

INSTALL(PROGRAMS
	${CMAKE_CURRENT_BINARY_DIR}/mpdaddall
	${CMAKE_CURRENT_BINARY_DIR}/mpdlen
	${CMAKE_CURRENT_BINARY_DIR}/mpdmmkeys
	${CMAKE_CURRENT_BINARY_DIR}/mpdnotify
	${CMAKE_CURRENT_BINARY_DIR}/mpdplayby
	DESTINATION bin
)

INSTALL(FILES
	${PROJECT_SOURCE_DIR}/man/mpdaddall.1
	${PROJECT_SOURCE_DIR}/man/mpdlen.1
	${PROJECT_SOURCE_DIR}/man/mpdmmkeys.1
	${PROJECT_SOURCE_DIR}/man/mpdnotify.1
	${PROJECT_SOURCE_DIR}/man/mpdplayby.1
	DESTINATION ${CMAKE_INSTALL_PREFIX}/share/man/man1
)

CONFIGURE_FILE(
	${CMAKE_CURRENT_SOURCE_DIR}/CMakeUninst.txt.in
	${CMAKE_CURRENT_BINARY_DIR}/CMakeUninst.txt
	IMMEDIATE @ONLY
)

ADD_CUSTOM_TARGET(uninstall
	COMMAND ${CMAKE_COMMAND} -P ${CMAKE_CURRENT_BINARY_DIR}/CMakeUninst.txt
)
