# mpdutils CMakeLists.txt
# Copyright (C) 2012 Alessandro Ghedini <al3xbio@gmail.com>
# This file is released under the 3 clause BSD license, see COPYING

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(mpdutils C)

SET(VERSION_MAJOR 0)
SET(VERSION_MINOR 1)

SET(INSTALL_PREFIX ${CMAKE_INSTALL_PREFIX})

INCLUDE(FindPkgConfig)
INCLUDE(CheckIncludeFiles)

PKG_CHECK_MODULES(X11 x11)
PKG_CHECK_MODULES(MPC REQUIRED libmpdclient)
PKG_CHECK_MODULES(NOTIFY libnotify)

CHECK_INCLUDE_FILES(libircclient/libircclient.h IRCCLIENT_FOUND)

INCLUDE_DIRECTORIES(
	${X11_INCLUDE_DIRS}
	${MPC_INCLUDE_DIRS}
	${NOTIFY_INCLUDE_DIRS}
)

ADD_EXECUTABLE(mpdaddall "src/mpdaddall.c")
TARGET_LINK_LIBRARIES(mpdaddall ${MPC_LIBRARIES})
SET_TARGET_PROPERTIES(mpdaddall PROPERTIES COMPILE_FLAGS "-Wall -pedantic -g")
INSTALL(PROGRAMS ${CMAKE_CURRENT_BINARY_DIR}/mpdaddall DESTINATION bin)
INSTALL(FILES ${PROJECT_SOURCE_DIR}/man/mpdaddall.1 DESTINATION ${CMAKE_INSTALL_PREFIX}/share/man/man1)

IF (IRCCLIENT_FOUND)
ADD_EXECUTABLE(mpdircbot "src/mpdircbot.c")
TARGET_LINK_LIBRARIES(mpdircbot ${MPC_LIBRARIES} "-lircclient")
SET_TARGET_PROPERTIES(mpdircbot PROPERTIES COMPILE_FLAGS "-Wall -pedantic -g")
INSTALL(PROGRAMS ${CMAKE_CURRENT_BINARY_DIR}/mpdircbot DESTINATION bin)
INSTALL(FILES ${PROJECT_SOURCE_DIR}/man/mpdircbot.1 DESTINATION ${CMAKE_INSTALL_PREFIX}/share/man/man1)
ENDIF (IRCCLIENT_FOUND)

ADD_EXECUTABLE(mpdislast "src/mpdislast.c")
TARGET_LINK_LIBRARIES(mpdislast ${MPC_LIBRARIES})
SET_TARGET_PROPERTIES(mpdislast PROPERTIES COMPILE_FLAGS "-Wall -pedantic -g")
INSTALL(PROGRAMS ${CMAKE_CURRENT_BINARY_DIR}/mpdislast DESTINATION bin)
INSTALL(FILES ${PROJECT_SOURCE_DIR}/man/mpdislast.1 DESTINATION ${CMAKE_INSTALL_PREFIX}/share/man/man1)

ADD_EXECUTABLE(mpdlength "src/mpdlength.c")
TARGET_LINK_LIBRARIES(mpdlength ${MPC_LIBRARIES})
SET_TARGET_PROPERTIES(mpdlength PROPERTIES COMPILE_FLAGS "-Wall -pedantic -g")
INSTALL(PROGRAMS ${CMAKE_CURRENT_BINARY_DIR}/mpdlength DESTINATION bin)
INSTALL(FILES ${PROJECT_SOURCE_DIR}/man/mpdlength.1 DESTINATION ${CMAKE_INSTALL_PREFIX}/share/man/man1)

IF (X11_FOUND)
ADD_EXECUTABLE(mpdmmkeys "src/mpdmmkeys.c")
TARGET_LINK_LIBRARIES(mpdmmkeys ${MPC_LIBRARIES} ${X11_LIBRARIES})
SET_TARGET_PROPERTIES(mpdmmkeys PROPERTIES COMPILE_FLAGS "-Wall -pedantic -g")
INSTALL(PROGRAMS ${CMAKE_CURRENT_BINARY_DIR}/mpdmmkeys DESTINATION bin)
INSTALL(FILES ${PROJECT_SOURCE_DIR}/man/mpdmmkeys.1 DESTINATION ${CMAKE_INSTALL_PREFIX}/share/man/man1)
ENDIF (X11_FOUND)

IF (NOTIFY_FOUND)
ADD_EXECUTABLE(mpdnotify "src/mpdnotify.c")
TARGET_LINK_LIBRARIES(mpdnotify ${MPC_LIBRARIES} ${NOTIFY_LIBRARIES})
SET_TARGET_PROPERTIES(mpdnotify PROPERTIES COMPILE_FLAGS "-Wall -pedantic -g")
INSTALL(PROGRAMS ${CMAKE_CURRENT_BINARY_DIR}/mpdnotify DESTINATION bin)
INSTALL(FILES ${PROJECT_SOURCE_DIR}/man/mpdnotify.1 DESTINATION ${CMAKE_INSTALL_PREFIX}/share/man/man1)
ENDIF (NOTIFY_FOUND)

ADD_EXECUTABLE(mpdplayby "src/mpdplayby.c")
TARGET_LINK_LIBRARIES(mpdplayby ${MPC_LIBRARIES})
SET_TARGET_PROPERTIES(mpdplayby PROPERTIES COMPILE_FLAGS "-Wall -pedantic -g")
INSTALL(PROGRAMS ${CMAKE_CURRENT_BINARY_DIR}/mpdplayby DESTINATION bin)
INSTALL(FILES ${PROJECT_SOURCE_DIR}/man/mpdplayby.1 DESTINATION ${CMAKE_INSTALL_PREFIX}/share/man/man1)

CONFIGURE_FILE(
	${CMAKE_CURRENT_SOURCE_DIR}/CMakeUninst.txt.in
	${CMAKE_CURRENT_BINARY_DIR}/CMakeUninst.txt
	IMMEDIATE @ONLY
)

ADD_CUSTOM_TARGET(uninstall
	COMMAND ${CMAKE_COMMAND} -P ${CMAKE_CURRENT_BINARY_DIR}/CMakeUninst.txt
)
