# mpdgems CMakeLists.txt
# Copyright (C) 2012 Alessandro Ghedini <al3xbio@gmail.com>
# This file is released under the 3 clause BSD license, see COPYING

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(mpdgems C)

SET(VERSION_MAJOR 0)
SET(VERSION_MINOR 3)

INCLUDE(FindPkgConfig)
INCLUDE(CheckIncludeFiles)

PKG_CHECK_MODULES(X11 x11)
PKG_CHECK_MODULES(NOTIFY libnotify)
PKG_CHECK_MODULES(MPC REQUIRED libmpdclient)

CHECK_INCLUDE_FILES(libircclient/libircclient.h IRCCLIENT_FOUND)

INCLUDE_DIRECTORIES(
	${X11_INCLUDE_DIRS}
	${MPC_INCLUDE_DIRS}
	${NOTIFY_INCLUDE_DIRS}
)

MACRO(ADD_MPDUTIL BIN_NAME)
	ADD_EXECUTABLE(${BIN_NAME} "src/${BIN_NAME}.c")

	TARGET_LINK_LIBRARIES(${BIN_NAME}
		${MPC_LIBRARIES} ${ARGV1}
	)

	INSTALL(PROGRAMS
		${CMAKE_CURRENT_BINARY_DIR}/${BIN_NAME}
		DESTINATION bin
	)

	INSTALL(FILES
		${PROJECT_SOURCE_DIR}/man/${BIN_NAME}.1
		DESTINATION ${CMAKE_INSTALL_PREFIX}/share/man/man1
	)
ENDMACRO(ADD_MPDUTIL)

ADD_MPDUTIL(mpdaddall)

IF (IRCCLIENT_FOUND)
ADD_MPDUTIL(mpdircbot "-lircclient")
ENDIF (IRCCLIENT_FOUND)

ADD_MPDUTIL(mpdislast)
ADD_MPDUTIL(mpdlength)

IF (X11_FOUND)
ADD_MPDUTIL(mpdmmkeys ${X11_LIBRARIES})
ENDIF (X11_FOUND)

ADD_MPDUTIL(mpdnextby)

IF (NOTIFY_FOUND)
ADD_MPDUTIL(mpdnotify ${NOTIFY_LIBRARIES})
ENDIF (NOTIFY_FOUND)

ADD_MPDUTIL(mpdplayby)

CONFIGURE_FILE(
	${CMAKE_CURRENT_SOURCE_DIR}/CMakeUninst.txt.in
	${CMAKE_CURRENT_BINARY_DIR}/CMakeUninst.txt
	IMMEDIATE @ONLY
)

ADD_CUSTOM_TARGET(uninstall
	COMMAND ${CMAKE_COMMAND} -P ${CMAKE_CURRENT_BINARY_DIR}/CMakeUninst.txt
)
